[package]
name = "qtvstat"
description = "Get information from QTV servers."
keywords = ["quake", "quakeworld", "qtv", "servers"]
repository = "https://github.com/vikpe/qtvstat"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dashmap = "5.5.3"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = "1.37.0"
futures = "0.3.30"
quake_qtvinfo = "0.1.0"
tinyudp = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
